# sayod

./: .git_archival.txt  .gitignore  .gitmodules  .pylintrc  LICENSE  README.md  analyse  analyse.py  analyse.sh  backup  backup-squasher  config.py  config_dir  context.py  copier.py  copy  copy.py  copy.sh  database  database.py  deadtime.py  find_config.sh  grand_commit  grand_commit.py  helpers.sh  log.py  logreader  mailer.py  notify.py  notify.sh  provider.py  pyanalyse  pyproject.toml  receiver  remotereader.py  replace-git  replacegit.py  rsync.py  small_commit  small_commit.py  (+4 more)
doc/: example.ini  mkdocs.yml
docs/: configuration_file.md  context.md  index.md  sayod-backup.md
sayod/: __init__.py  analyse.py  arguments.py  backup.py  config.py  context.py  copy.py  database.py  deadtime.py  grand_commit.py  log.py  logreader.py  mailer.py  main.py  notify.py  plain_log.py  provider.py  receiver.py  remotereader.py  replacegit.py  rsync.py  scope.py  small_commit.py  squasher.py  taggedentry.py  taggedlog.py  tester.py  version.py  zippedgit.py
src/: context.py  provider.py  readlog.py  receive.py  remotereader.py  rsync.py  scope.py  taggedlog.py  zippedgit.py
