[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sayod"
# version = "4.0.0.0"
description = "Sayod /ˈseɪəd/: SAve Your Own Data. Say It: Backups are good!"
authors = [{ name="Bjørn Bäuchle", email="sayod@frankfurtium.de" }]
maintainers = [{ name="Bjørn Bäuchle", email="sayod@frankfurtium.de" }]

license = { text = "© 2024 Bjørn Bäuchle" }
classifiers = [
  "License :: Other/Proprietary License"
]
dynamic = ["version"]
# really, 3.9 because argparse.BooleanOptionalAction
requires-python = ">= 3.8"
dependencies = [
  "gnupg",
  "systemd-python",
  "regex"
]

keywords = ["backup", "git", "dump database", "squash"]

[project.scripts]
sayod-backup = "sayod:backup"
logreader = "sayod:logreader"
receiver = "sayod:receiver"

[tool.setuptools_scm]
version_file = "sayod/_version.py"
